--- a/src/SCClassicalPlanning.Documentation/Pages/lab/StateSpaceExplorer.razor
+++ b/src/SCClassicalPlanning.Documentation/Pages/lab/StateSpaceExplorer.razor
@@ -80,7 +80,7 @@
     void RenderListItem(LinkedListNode<StateSpaceEdge>? lastPathNode, StateSpaceNode stateNode, StateSpaceEdge? nextExploredEdge)
     {
         <li>
-            @if (stateNode.State.Satisfies(problem.Goal))
+            @if (stateNode.State.Satisfies(problem.EndGoal))
             {
                 <b>GOAL MET! </b>
             }
@@ -129,12 +129,12 @@
             problemPddl: string.Empty),
 
         ["Blocks World"] = () => new(
-            domainPddl: BlocksWorld.DomainPDDL,
-            problemPddl: BlocksWorld.ExampleProblemPDDL),
+            domainPddl: BlocksWorldDomain.DomainPDDL,
+            problemPddl: BlocksWorldDomain.ExampleProblemPDDL),
 
         ["Air Cargo"] = () => new(
-            domainPddl: AirCargo.DomainPDDL,
-            problemPddl: AirCargo.ExampleProblemPDDL),
+            domainPddl: AirCargoDomain.DomainPDDL,
+            problemPddl: AirCargoDomain.ExampleProblemPDDL),
     };
 
     private FormData formData = Presets["Blocks World"].Invoke();
@@ -189,7 +189,7 @@
             // Yes, could cache the parse results to avoid parsing multiple times, but not worth it for now at least.
             // TODO: Some "TryParse.." methods might be useful - they'd certainly make this method a bit cleaner.
             // TODO: If we had a ParseError exception type, we could perhaps highlight the offending text..
-            HashSetDomain? domain = null;
+            PddlDomain? domain = null;
             Problem? problem = null;
             List<ValidationResult> errors = new();
             try
