--- a/src/SCClassicalPlanning.Documentation/Pages/lab/StateSpaceExplorer.razor
+++ b/src/SCClassicalPlanning.Documentation/Pages/lab/StateSpaceExplorer.razor
@@ -37,7 +37,7 @@
                         Once the problem definition has been submitted, a representation of the initial state of the problem will appear below the form, along with a link for each applicable action.
                         You can explore the state space by clicking on the action to apply.
                         Prior states will remain visible, to show the path you have taken from the initial state.
-                        A "GOAL MET!" message will be shown if you reach a state that satisfies the goal.
+                        A "GOAL MET!" message will be shown if you reach a state that meets the goal.
                     </li>
                     <li>
                         The source code for this page can be found <a href="https://github.com/sdcondon/SCClassicalPlanning/blob/main/src/SCClassicalPlanning.Documentation/Pages/lab/StateSpaceExplorer.razor">here</a>.
@@ -80,7 +80,7 @@
     void RenderListItem(LinkedListNode<StateSpaceEdge>? lastPathNode, StateSpaceNode stateNode, StateSpaceEdge? nextExploredEdge)
     {
         <li>
-            @if (stateNode.State.Satisfies(problem.EndGoal))
+            @if (stateNode.State.Meets(problem.EndGoal))
             {
                 <b>GOAL MET! </b>
             }
