--- a/src/SCClassicalPlanning.Documentation/Razor/_Imports.razor
+++ b/src/SCClassicalPlanning.Documentation/Razor/_Imports.razor
@@ -1,4 +1,5 @@
-﻿@using System.Net.Http
+﻿@using Blazorise
+@using System.Net.Http
 @using System.Net.Http.Json
 @using Microsoft.AspNetCore.Components.Forms
 @using Microsoft.AspNetCore.Components.Routing
@@ -6,5 +7,6 @@
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.AspNetCore.Components.WebAssembly.Http
 @using Microsoft.JSInterop
-@using SCClassicalPlanning.Documentation
-@using SCClassicalPlanning.Documentation.Shared
+@using SCClassicalPlanning.Documentation.Razor
+@using SCClassicalPlanning.Documentation.Razor.Layout
+@using SCClassicalPlanning.Documentation.Razor.Shared
