docs site: use css isolation for markdown stuff & embed markdown files in client app

--- a/src/SCClassicalPlanning.Documentation/Razor/Pages/Home.razor
+++ b/src/SCClassicalPlanning.Documentation/Razor/Pages/Home.razor
@@ -2,4 +2,4 @@
 
 <PageTitle>Home</PageTitle>
 
-<Markdown MarkdownUri="md/home.md"></Markdown>
+<Markdown MarkdownResourceName="SCClassicalPlanning.Documentation.Razor.Pages.Home.razor.md" />
