--- a/src/SCClassicalPlanning.Documentation/Razor/Pages/Roadmap.razor
+++ b/src/SCClassicalPlanning.Documentation/Razor/Pages/Roadmap.razor
@@ -3,4 +3,4 @@
 
 <PageTitle>Roadmap</PageTitle>
 
-<Markdown MarkdownUri="md/roadmap.md"></Markdown>
+<Markdown MarkdownResourceName="SCClassicalPlanning.Documentation.Razor.Pages.Roadmap.razor.md" />
