--- a/src/SCClassicalPlanning.Documentation/Razor/Pages/LibraryOverview.razor
+++ b/src/SCClassicalPlanning.Documentation/Razor/Pages/LibraryOverview.razor
@@ -3,4 +3,4 @@
 
 <PageTitle>Library Overview</PageTitle>
 
-<Markdown MarkdownUri="md/library-overview.md"></Markdown>
+<Markdown MarkdownResourceName="SCClassicalPlanning.Documentation.Razor.Pages.LibraryOverview.razor.md" />
