--- a/src/SCClassicalPlanning.Documentation/Razor/Pages/GettingStarted.razor
+++ b/src/SCClassicalPlanning.Documentation/Razor/Pages/GettingStarted.razor
@@ -3,4 +3,4 @@
 
 <PageTitle>Getting Started</PageTitle>
 
-<Markdown MarkdownResourceName="SCClassicalPlanning.Documentation.Razor.Pages.GettingStarted.razor.md" />
+<Markdown ResourceName="SCClassicalPlanning.Documentation.Razor.Pages.GettingStarted.razor.md" />
