--- a/src/SCClassicalPlanning.Documentation/Razor/Pages/Home.razor
+++ b/src/SCClassicalPlanning.Documentation/Razor/Pages/Home.razor
@@ -2,4 +2,4 @@
 
 <PageTitle>Home</PageTitle>
 
-<Markdown MarkdownResourceName="SCClassicalPlanning.Documentation.Razor.Pages.Home.razor.md" />
+<Markdown ResourceName="SCClassicalPlanning.Documentation.Razor.Pages.Home.razor.md" />
