--- a/src/SCClassicalPlanning.Documentation/Razor/Pages/LibraryOverview.razor
+++ b/src/SCClassicalPlanning.Documentation/Razor/Pages/LibraryOverview.razor
@@ -3,4 +3,4 @@
 
 <PageTitle>Library Overview</PageTitle>
 
-<Markdown MarkdownResourceName="SCClassicalPlanning.Documentation.Razor.Pages.LibraryOverview.razor.md" />
+<Markdown ResourceName="SCClassicalPlanning.Documentation.Razor.Pages.LibraryOverview.razor.md" />
