--- a/src/SCClassicalPlanning.Documentation/Razor/Pages/SeeAlso.razor
+++ b/src/SCClassicalPlanning.Documentation/Razor/Pages/SeeAlso.razor
@@ -3,4 +3,4 @@
 
 <PageTitle>See Also</PageTitle>
 
-<Markdown MarkdownResourceName="SCClassicalPlanning.Documentation.Razor.Pages.SeeAlso.razor.md" />
+<Markdown ResourceName="SCClassicalPlanning.Documentation.Razor.Pages.SeeAlso.razor.md" />
