--- a/src/SCClassicalPlanning.Documentation/Razor/SharedComponents/Markdown.razor
+++ b/src/SCClassicalPlanning.Documentation/Razor/SharedComponents/Markdown.razor
@@ -5,6 +5,7 @@
 @using Markdig.Renderers.Html
 @using Markdig.Syntax
 @using System.Reflection
+
 @inherits ComponentBase
 @inject IJSRuntime JS
 
@@ -21,7 +22,7 @@
     protected override async Task OnInitializedAsync()
     {
         var pipeline = new MarkdownPipelineBuilder()
-            .Use(new Extension())
+            .Use(new HljsExtension())
             .UseAutoIdentifiers()
             .UseTaskLists()
             .UsePipeTables()
@@ -39,7 +40,7 @@
         JS.InvokeVoidAsync("hljs.highlightAll");
     }
 
-    public class Extension : IMarkdownExtension
+    public class HljsExtension : IMarkdownExtension
     {
         public void Setup(MarkdownPipelineBuilder pipeline)
         {
@@ -48,18 +49,17 @@
         public void Setup(MarkdownPipeline pipeline, IMarkdownRenderer renderer)
         {
             var htmlRenderer = renderer as Markdig.Renderers.HtmlRenderer;
-
             ObjectRendererCollection? objectRenderers = htmlRenderer?.ObjectRenderers;
 
-            if (objectRenderers != null && !objectRenderers.Contains<PrettyPrintCodeBlockRenderer>())
+            if (objectRenderers != null && !objectRenderers.Contains<HljsCodeBlockRenderer>())
             {
                 var codeBlockRenderer = objectRenderers.OfType<CodeBlockRenderer>().SingleOrDefault() ?? new CodeBlockRenderer();
-                objectRenderers.Replace<CodeBlockRenderer>(new PrettyPrintCodeBlockRenderer(codeBlockRenderer));
+                objectRenderers.Replace<CodeBlockRenderer>(new HljsCodeBlockRenderer(codeBlockRenderer));
             }
         }
     }
 
-    private class PrettyPrintCodeBlockRenderer(CodeBlockRenderer innerRenderer) : HtmlObjectRenderer<CodeBlock>
+    private class HljsCodeBlockRenderer(CodeBlockRenderer innerRenderer) : HtmlObjectRenderer<CodeBlock>
     {
         protected override void Write(Markdig.Renderers.HtmlRenderer renderer, CodeBlock obj)
         {
