--- a/src/SCClassicalPlanning.Documentation/Razor/_Imports.razor
+++ b/src/SCClassicalPlanning.Documentation/Razor/_Imports.razor
@@ -8,5 +8,5 @@
 @using Microsoft.AspNetCore.Components.WebAssembly.Http
 @using Microsoft.JSInterop
 @using SCClassicalPlanning.Documentation.Razor
-@using SCClassicalPlanning.Documentation.Razor.Layout
-@using SCClassicalPlanning.Documentation.Razor.Shared
+@using SCClassicalPlanning.Documentation.Razor.Layouts
+@using SCClassicalPlanning.Documentation.Razor.SharedComponents
